2004-01-01 [christoph]

	* src/maildir.c
		fix building of folder's GNode

	* src/maildir.c
		unregister FolderClass when unloading

2003-12-03 [christoph]

	* src/maildir.c
		sync with changes in Sylpheed's FolderClass >= 0.9.7claws11

2003-12-02 [christoph]

	* src/maildir.c
		sync with changes in Sylpheed's FolderClass >= 0.9.7claws10

	* src/plugin.c
		add version checks