@@ -1,0 +1,11 @@
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
+configure
+config.log
+config.status
+libtool
+pluginconfig.h
+pluginconfig.h.in
+stamp-h1
