@@ -1,0 +1,11 @@
+depcomp
+config.guess
+config.sub
+install-sh
+ltmain.sh
+Makefile
+Makefile.in
+missing
+mkinstalldirs
+ylwrap
+compile
